syntax = "proto3";

option go_package = "github.com/cybozu-go/moco-agent/server/proto";

message HealthRequest {}

message HealthResponse {
    bool ok = 1;
    bool is_out_of_synced = 2;
    bool is_under_cloning = 3;
}

service HealthService {
    rpc Health(HealthRequest) returns (HealthResponse);
}
